@@ -398,14 +398,14 @@ subdirectories).
 
   Removes a repository from a group.
 
-* `content repository [expression]`
+* `wanted repository [expression]`
 
   When run with an expression, configures the content that is preferred
   to be held in the archive. See PREFERRED CONTENT below.
 
   For example:
 
-        	git annex content . "include=*.mp3 or include=*.ogg"
+        	git annex wanted . "include=*.mp3 or include=*.ogg"
 
   Without an expression, displays the current preferred content setting
   of the repository.
@@ -973,7 +973,7 @@ file contents are present at either of two repositories.
 
 Each repository has a preferred content setting, which specifies content
 that the repository wants to have present. These settings can be configured
-using `git annex vicfg` or `git annex content`.
+using `git annex vicfg` or `git annex wanted`.
 They are used by the `--auto` option, and by the git-annex assistant.
 
 The preferred content settings are similar, but not identical to
