@@ -7,7 +7,7 @@ this allows `git annex get --auto`, `git annex drop --auto`, etc to do
 smarter things.
 
 Preferred content settings can be edited using `git
-annex vicfg`, or viewed and set at the command line with `git annex content`.
+annex vicfg`, or viewed and set at the command line with `git annex wanted`.
 Each repository can have its own settings, and other repositories may also
 try to honor those settings. So there's no local `.git/config` setting it.
 
